# nrvx

./: Anchor.toml  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml
crates/zk_prover/src/: circuit.rs  commitment.rs  lib.rs
docs/: architecture.md  disclosure-types.md  getting-started.md
examples/: simple_proof.ts
programs/fixr_core/src/: errors.rs  state.rs
programs/fixr_core/src/instructions/: disclosure.rs  generate_proof.rs
scripts/: deploy.sh  verify_proof.sh
sdk/src/: disclosure.ts  index.ts  solana.ts  types.ts
sdk/tests/: prover.test.ts
